# lightworks

./: .buildinfo  .gitignore  CITATION.cff  CITATION.ff  Makefile  README.md  ROADMAP.md  background.html  bibliography.html  contributing.html  genindex.html  getting_started.html  index.html  make.bat  matrix.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  sphinx-reading-durations.json  testing_circ.ipynb  toffoli_testing.ipynb  usage.html
.github/: pull_request_template.md
_sources/: background.rst.txt  contributing.rst.txt  getting_started.rst.txt  index.rst.txt  usage.rst.txt
emulator/: analyzer.html  backend.html  imperfect_sampling.html  index.html  quick_sampler.html  sampler.html  simulator.html  theory.html
emulator_reference/: analyzer.html  backend.html  detector.html  index.html  quick_sampler.html  sampler.html  sampling_result.html  simulation_result.html  simulator.html  source.html  utils.html
examples/: 3_qubit_GHZ_generation.html  3_qubit_GHZ_generation.ipynb  bell_state_generator.html  bell_state_generator.ipynb  circuit_building.html  circuit_building.ipynb  heralded_cnot.html  heralded_cnot.ipynb  index.html  multi_photon_sampling.html  multi_photon_sampling.ipynb  ralph_cnot.html  ralph_cnot.ipynb  single_photon_demo.html  single_photon_demo.ipynb
interferometers/: index.html  tutorial.html  tutorial.ipynb
interferometers_reference/: distributions.html  error_model.html  index.html  reck.html
lightworks/: __init__.py  __settings.py  __version.py  settings.py
lightworks_tests/: cnot_test.py  sampler_test.py  (+6 more)
(+399 files in other folders)
