[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = ["tests/*", "docs/*", "lightworks/sdk/optimisation/*"]

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "thewalrus.*"
ignore_missing_imports = true